--- a/Themes/new/Styles/christmas.css
+++ b/Themes/new/Styles/christmas.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "AwesomeSerif";
-  src: local("AwesomeSerif"), url("/Themes/new/Assets/Fonts/AwesomeSerifItalic-BdRegular.otf") format("opentype");
+  src: local("AwesomeSerif"), url("https://dg0ddngxdz549.cloudfront.net/newspring/christmas/2023/fonts/AwesomeSerifItalic-BdRegular.otf") format("opentype");
 }
 .christmas-at-newspring .bg-forrest {
   background-color: #102316 !important;
@@ -38,7 +38,8 @@
 .christmas-at-newspring .text-alpine {
   color: #033527 !important;
 }
-.christmas-at-newspring .text-aged-wine {
+.christmas-at-newspring .text-aged-wine,
+.christmas-at-newspring .text-aged-wine * {
   color: #53170a !important;
 }
 .christmas-at-newspring .text-aged-gold {
@@ -145,4 +146,34 @@
 }
 .christmas-at-newspring .outline-none {
   outline: none;
+}
+.select-wrapper {
+  display: inline-block;
+  position: relative;
+  background-color: #6bac43;
+  border-radius: 1000px;
+}
+.select-wrapper select {
+  padding: 12px 25px;
+  padding-right: 45px;
+  background-color: transparent;
+  border: 0;
+  font-family: 'colfax-web', sans-serif;
+  font-weight: 500;
+  letter-spacing: -0.5px;
+  outline: none;
+  -webkit-appearance: none;
+}
+.select-wrapper select:hover {
+  cursor: pointer;
+}
+.select-wrapper:after {
+  content: '\f0d7';
+  font-family: "Font Awesome 5 Pro";
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  margin-top: -14px;
+  font-weight: 900;
+  cursor: pointer;
 }
