--- a/Themes/new/Styles/gauntlet.less
+++ b/Themes/new/Styles/gauntlet.less
@@ -87,4 +87,161 @@
 .btn-primary:active,
 .btn-primary:focus {
   background-color: darken(@btn-primary-bg, 10%);
+}/* stylelint-disable */
+/* stylelint-enable */
+/*
+    The accent colors are deprecated and should not be used in new theme development. They will be
+    removed in Rock v 6.0.
+*/
+:root {
+  --color-fuscia: #e854be;
+  --color-blue: #215cd7;
+  --color-beige: #ede9d7;
+  --color-amber: #fd8a1a;
+  --color-red: #dd0e23;
+  --color-green: #618a00;
+  --color-yellow: #ffc240;
+  --color-purple: #8e69fb;
+  --color-sky: #acdde5;
+  --color-slate: #202427;
+  --color-pink: #f687a8;
+  --color-orange: #f05421;
+  --color-lime: #b9d956;
+}
+.bg-fuscia {
+  background-color: var(--color-fuscia);
+}
+.bg-blue {
+  background-color: var(--color-blue);
+}
+.bg-beige {
+  background-color: var(--color-beige);
+}
+.bg-amber {
+  background-color: var(--color-amber);
+}
+.bg-red {
+  background-color: var(--color-red);
+}
+.bg-green {
+  background-color: var(--color-green);
+}
+.bg-yellow {
+  background-color: var(--color-yellow);
+}
+.bg-purple {
+  background-color: var(--color-purple);
+}
+.bg-sky {
+  background-color: var(--color-sky);
+}
+.bg-slate {
+  background-color: var(--color-slate);
+}
+.bg-pink {
+  background-color: var(--color-pink);
+}
+.bg-orange {
+  background-color: var(--color-orange);
+}
+.bg-lime {
+  background-color: var(--color-lime);
+}
+.text-fuscia {
+  color: var(--color-fuscia);
+}
+.text-blue {
+  color: var(--color-blue);
+}
+.text-beige {
+  color: var(--color-beige);
+}
+.text-amber {
+  color: var(--color-amber);
+}
+.text-red {
+  color: var(--color-red);
+}
+.text-green {
+  color: var(--color-green);
+}
+.text-yellow {
+  color: var(--color-yellow);
+}
+.text-purple {
+  color: var(--color-purple);
+}
+.text-sky {
+  color: var(--color-sky);
+}
+.text-slate {
+  color: var(--color-slate);
+}
+.text-pink {
+  color: var(--color-pink);
+}
+.text-orange {
+  color: var(--color-orange);
+}
+.text-lime {
+  color: var(--color-lime);
+}
+.fill-fuscia {
+  fill: var(--color-fuscia);
+}
+.fill-blue {
+  fill: var(--color-blue);
+}
+.fill-beige {
+  fill: var(--color-beige);
+}
+.fill-amber {
+  fill: var(--color-amber);
+}
+.fill-red {
+  fill: var(--color-red);
+}
+.fill-green {
+  fill: var(--color-green);
+}
+.fill-yellow {
+  fill: var(--color-yellow);
+}
+.fill-purple {
+  fill: var(--color-purple);
+}
+.fill-sky {
+  fill: var(--color-sky);
+}
+.fill-slate {
+  fill: var(--color-slate);
+}
+.fill-pink {
+  fill: var(--color-pink);
+}
+.fill-orange {
+  fill: var(--color-orange);
+}
+.fill-lime {
+  fill: var(--color-lime);
+}
+.btn-primary {
+  background-color: @color-orange;
+  color: #ffffff;
+}
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:focus {
+  background-color: darken(@color-orange, 10%);
+}
+
+
+.btn-secondary {
+  background-color: @black;
+  color: #ffffff;
+}
+.btn-secondary:hover,
+.btn-secondary:active,
+.btn-secondary:focus {
+  background-color: darken(@black, 10%);
 }
