--- a/Themes/new/Styles/gauntlet.less
+++ b/Themes/new/Styles/gauntlet.less
@@ -25,6 +25,20 @@
 
 //
 //
+// OVERRIDES
+//
+//
+
+html {
+	scroll-behavior: smooth;
+}
+
+section {
+  scroll-margin-top: 108px;
+}
+
+//
+//
 // HELPERS
 //
 //
@@ -126,6 +140,28 @@
   background-color: darken(@color-amber, 10%);
 }
 
+.btn-fuscia {
+  background-color: @color-fuscia;
+  color: @white;
+}
+.btn-fuscia:hover,
+.btn-fuscia:active,
+.btn-fuscia:focus {
+  color: @white;
+  background-color: darken(@color-fuscia, 10%);
+}
+
+.btn-slate {
+  background-color: @color-slate;
+  color: @white;
+}
+.btn-slate:hover,
+.btn-slate:active,
+.btn-slate:focus {
+  color: @white;
+  background-color: darken(@color-slate, 10%);
+}
+
 
 //
 //
@@ -135,6 +171,8 @@
 
 body {
   font-family: @font-family-headings;
+  font-weight: 500;
+  letter-spacing: -.5px;
 }
 
 .lead {
