--- a/Themes/new/Styles/gauntlet.css
+++ b/Themes/new/Styles/gauntlet.css
@@ -4,6 +4,12 @@
     The accent colors are deprecated and should not be used in new theme development. They will be
     removed in Rock v 6.0.
 */
+html {
+  scroll-behavior: smooth;
+}
+section {
+  scroll-margin-top: 108px;
+}
 .bg-fuscia {
   background-color: #e854be;
 }
@@ -164,8 +170,30 @@
   color: #ffffff;
   background-color: #e27102;
 }
+.btn-fuscia {
+  background-color: #e854be;
+  color: #ffffff;
+}
+.btn-fuscia:hover,
+.btn-fuscia:active,
+.btn-fuscia:focus {
+  color: #ffffff;
+  background-color: #e227ad;
+}
+.btn-slate {
+  background-color: #202427;
+  color: #ffffff;
+}
+.btn-slate:hover,
+.btn-slate:active,
+.btn-slate:focus {
+  color: #ffffff;
+  background-color: #090a0b;
+}
 body {
   font-family: "colfax-web", sans-serif;
+  font-weight: 500;
+  letter-spacing: -0.5px;
 }
 .lead {
   color: inherit;
