--- a/Themes/new/Styles/utilities/_ratios.less
+++ b/Themes/new/Styles/utilities/_ratios.less
@@ -21,11 +21,14 @@
   .ratio@{infix}-thin {
     aspect-ratio: 3 / 1;
   }
+  .ratio@{infix}-landscape {
+    aspect-ratio: 2 / 1;
+  }
   .ratio@{infix}-video {
     aspect-ratio: 16 / 9;
   }
-  .ratio@{infix}-landscape {
-    aspect-ratio: 2 / 1;
+  .ratio@{infix}-shuare {
+    aspect-ratio: 1.25 / 1;
   }
   .ratio@{infix}-square {
     aspect-ratio: 1 / 1;
